refactor(sql): implement streaming across SQL analysis pipelines
- produce SplitScript entries incrementally using streaming token processing
- stream statement splitting through behavior and security-domain analysis implementations
- retain the single-statement String/List lineage API and reject multi-statement input
- remove CodeInfo and pass baseLine and baseColumn directly
- fix base location mapping and MySQL EOF detection
- update console integrations and existing tests for the unified APIs